Fix #312 - Java 9 compatibility